# algs200x

./: .gitignore  README.md  stresser.rs  textbooks.txt
algs/: Cargo.toml  aplus.sh  build.sh  build_run.sh  cargo  generate_tests.rs  grader.rs  grader.sh  maximum_pairwise_product.sh  run_grader.sh  week1_aplusb_test.sh  wk1_aplus.sh
algs/grader_report/: aplusb.txt
algs/perfomance_tests_logs/: aplus.logcargo
algs/src/: aplusb.rs  max_pairwise_product.rs
course1_algorithmic_toolbox/: Cargo.toml  build.sh  build_run.sh  grader.rs  stress.rs  utils.rs
course1_algorithmic_toolbox/.cargo/: config.toml
course1_algorithmic_toolbox/algs_std/: Cargo.toml
course1_algorithmic_toolbox/algs_std/src/: dev.rs  fastrand.rs  io.rs  lib.rs  randy.rs
course1_algorithmic_toolbox/lib/: algs_std.rs
course1_algorithmic_toolbox/src/: aplusb.rs  main.rs  max_pairwise_product.rs  stresser.rs
week1_programming_challenges/1_sum_of_two_digits/: APlusB.py  aplusb.rs
week1_programming_challenges/2_maximum_pairwise_product/: max_pairwise_product  naive.txt
week1_programming_challenges_starters/2_maximum_pairwise_product/: .max_pairwise_product.cpp.swp  .max_pairwise_product.go.swp  .max_pairwise_product.py.swp  .mxpwpn.go.swp  2_maximum_pairwise_product  arch.go  backup  backup!  egdata.go  max_pairwise_product  max_pairwise_product.py  maxpfast  mxpwpn  mxpwpn.go  writedataset-version1
week2_algorithmic_warmup/2_last_digit_of_fibonacci_number/: debug  fibonacci_last_digit.go
week2_algorithmic_warmup/4_least_common_multiple/: stresstest.py
(+26 files in other folders)
