[package]
name = "algs_std"
version = "0.1.0"
authors = ["saebs <ntabenism@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "1.4.0"
[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"

jemalloc-ctl = "0.3.3"